# ChangeLog for dev-ruby/ruby-gconf2
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/Attic/ChangeLog,v 1.33 2008/03/30 15:20:01 armin76 Exp $

  30 Mar 2008; Raúl Porcel <armin76@gentoo.org> ruby-gconf2-0.16.0.ebuild:
  alpha/ia64 stable wrt #215149

  28 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
  ruby-gconf2-0.16.0.ebuild:
  Sparc stable, part of Bug #215149.

*ruby-gconf2-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
  -ruby-gconf2-0.10.1.ebuild, -ruby-gconf2-0.11.0.ebuild,
  -ruby-gconf2-0.12.0.ebuild, +ruby-gconf2-0.16.0.ebuild:
  Version Bump. Remove older versions.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha

  17 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ruby-gconf2-0.14.1.ebuild:
  ppc stable

*ruby-gconf2-0.15.0 (30 Aug 2006)

  30 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-gconf2-0.15.0.ebuild:
  Version bump

  03 Apr 2006; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.14.1.ebuild:
  Mark 0.14.1 stable on ia64

  30 Mar 2006; Ferris McCormick <fmccor@gentoo.org>
  ruby-gconf2-0.14.1.ebuild:
  Stable on sparc for upgrade to ruby-gtk2-0.14.1 suite.

*ruby-gconf2-0.14.1 (15 Nov 2005)

  15 Nov 2005; Michael Kohl <citizen428@gentoo.org>
  +ruby-gconf2-0.14.1.ebuild:
  Version bump. See bugs #103470 and #109641. src_test temporarily removed.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.12.0.ebuild:
  stable on ia64

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  ruby-gconf2-0.12.0.ebuild:
  Stable on ppc.

  02 Aug 2005; Simon Stelling <blubb@gentoo.org> ruby-gconf2-0.12.0.ebuild:
  stable on amd64

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  ruby-gconf2-0.12.0.ebuild:
  Stable on alpha.

  22 May 2005; Jason Wever <weeve@gentoo.org> ruby-gconf2-0.12.0.ebuild:
  Added ~sparc keyword.
