@@ -1,11 +1,11 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprint/Attic/ruby-gnomeprint-0.16.0.ebuild,v 1.5 2008/03/29 19:31:24 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprint/Attic/ruby-gnomeprint-0.16.0.ebuild,v 1.6 2008/03/30 20:20:33 coldwind Exp $
 
 inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby bindings for gnomeprint"
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="amd64 ~ia64 ~ppc ~sparc ~x86"
 IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND=">=gnome-base/libgnomeprint-2.8"
