@@ -1,11 +1,11 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ruby-gtkhtml2-0.16.0.ebuild,v 1.5 2008/03/30 15:29:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ruby-gtkhtml2-0.16.0.ebuild,v 1.6 2008/03/30 20:25:05 coldwind Exp $
 
 inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby GtkHtml2 bindings"
-KEYWORDS="~amd64 ia64 ~ppc sparc ~x86"
+KEYWORDS="amd64 ia64 ~ppc sparc ~x86"
 IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND="=gnome-extra/gtkhtml-2*
