@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gnomeprint
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprint/Attic/ChangeLog,v 1.8 2008/03/29 19:31:24 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprint/Attic/ChangeLog,v 1.9 2008/03/30 20:20:33 coldwind Exp $
+
+  30 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
+  ruby-gnomeprint-0.16.0.ebuild:
+  amd64 stable wrt bug #215149
 
   29 Mar 2008; Brent Baude <ranger@gentoo.org>
   ruby-gnomeprint-0.16.0.ebuild:
