@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gtkhtml2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ChangeLog,v 1.15 2008/03/30 15:29:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ChangeLog,v 1.16 2008/03/30 20:25:05 coldwind Exp $
+
+  30 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
+  ruby-gtkhtml2-0.16.0.ebuild:
+  amd64 stable wrt bug #215149
 
   30 Mar 2008; Raúl Porcel <armin76@gentoo.org>
   ruby-gtkhtml2-0.16.0.ebuild:
